--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxtjs/axios": "^5.0.0",
     "contentful": "^7.0.5",
     "cross-env": "^5.2.0",
+    "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "nuxt": "^2.0.0"
   },
