--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "cross-env": "^5.2.0",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "vue-markdown": "^2.2.4"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
