--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "blog",
+  "name": "kokoiku.com",
   "version": "1.0.0",
-  "description": "blog",
-  "author": "hayamat",
+  "description": "kokoiku.com",
+  "author": "kokoiku",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
@@ -16,10 +16,9 @@
     "@nuxtjs/axios": "^5.0.0",
     "contentful": "^7.0.5",
     "cross-env": "^5.2.0",
-    "dotenv": "^6.1.0",
+    "element-ui": "^2.4.6",
     "express": "^4.16.3",
-    "nuxt": "^2.0.0",
-    "vue-markdown": "^2.2.4"
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
